gccida/g1/new_optab
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5053:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0  new_optab( ) 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5056:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *handlers; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5056:36: error: use of undeclared identifier 'handlers'
$B50C8071A5A789E219D5EDC319094081 *handlers; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5059:1: error: use of undeclared identifier 'handlers'
handlers = v0->handlers; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5062:1: error: use of undeclared identifier 'handlers'
handlers->insn_code = CODE_FOR_nothing; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5063:1: error: use of undeclared identifier 'handlers'
handlers->libfunc = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5064:3: error: use of undeclared identifier 'handlers'
++handlers; 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5066:58: error: expected expression
while ( handlers != ( $B50C8071A5A789E219D5EDC319094081 *)&v0[1] ); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5066:23: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
while ( handlers != ( $B50C8071A5A789E219D5EDC319094081 *)&v0[1] ); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/optabs.c:5066:9: error: use of undeclared identifier 'handlers'
while ( handlers != ( $B50C8071A5A789E219D5EDC319094081 *)&v0[1] ); 
        ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/new_optab/src/obj/optabs.o] Error 1
